crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__multiple_line_endings.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->line1
line2line3
line4
<!-- REPLACEMENTS -->
<!-- SEARCH -->line2
<!-- REPLACE -->replaced
<!-- FINAL -->line1
replacedline3
line4
