crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__nested_replacements.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->outer inner outer
<!-- REPLACEMENTS -->
<!-- SEARCH -->outer inner outer
<!-- REPLACE -->modified inner
<!-- SEARCH -->inner
<!-- REPLACE -->content
<!-- FINAL -->modified content
