crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__prefers_exact_matches_over_fuzzy.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foo foox foo
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo
<!-- REPLACE -->bar
<!-- SEARCH -->foo
<!-- REPLACE -->baz
<!-- FINAL -->bar bazx foo
