crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__preserve_indentation.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->    indented
        more indented
<!-- REPLACEMENTS -->
<!-- SEARCH -->indented
<!-- REPLACE -->text
<!-- FINAL -->    text
        more indented
