crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__replaces_only_first_match.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->foo bar foo
<!-- REPLACEMENTS -->
<!-- SEARCH -->foo
<!-- REPLACE -->baz
<!-- FINAL -->baz bar foo
