crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__sequential_replacements_on_identical_text.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->same same same
<!-- REPLACEMENTS -->
<!-- SEARCH -->same
<!-- REPLACE -->different
<!-- SEARCH -->same
<!-- REPLACE -->changed
<!-- FINAL -->different changed same
