crates/forge_tool/src/patch/snapshots/forge_tool__patch__apply_json__test__unicode_characters.snap
---
source: crates/forge_tool/src/patch/apply_json.rs
expression: actual
snapshot_kind: text
---
<!-- INITIAL -->Hello 世界
<!-- REPLACEMENTS -->
<!-- SEARCH -->世界
<!-- REPLACE -->🌍
<!-- FINAL -->Hello 🌍
